# C-generics-templates

./: CMakeLists.txt  README.md
preprocessor/: ctemplate_preproc.cpp
src/: main.c
